[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "u_d_TSETMC_AdjClose_linearly_filled"
version = "0.0.0"
authors = [{ name = "Mahdi Mir", email = "imahdimir@gmail.com" }]
readme = "README.md"
dependencies = [
    "pyarrow==13.0.0",
    "fastparquet==2023.8.0",
    "pandas==2.1.1",
    "namespace_mahdimir==3.4.1",
    "run_py==3.0.0",
    "githubdata==16.1.2",
    "mirutil==25.1.0",
    "mtok==1.3.0",
]
